# Listro

./: CMakeLists.txt  README.md
.cache/clangd/index/: listro.cpp.4E1EC0474D103F95.idx  listro.hpp.F5B2A6FE4CBE37A3.idx  main.cpp.64FDCE0BF888B6B4.idx  sqlite3.c.A1A87F7C2087A6F8.idx  sqlite3.h.3D62672EE9CC998A.idx  task.cpp.DB3111C8083249CF.idx  task.hpp.B363D1385A197AD1.idx
src/: listro.cpp  listro.hpp  main.cpp  task.cpp  task.hpp
